# anomaly-detection-api

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.yaml  main.py  pyproject.toml  run_local.py
.qlty/: qlty.toml
docker/: api.Dockerfile  entrypoint.sh  mlflow.Dockerfile  postgres-init.sh  prometheus.yml  test.Dockerfile
docs/: architecture.md  benchmark_scripts.md  grafana_metrics.md  openapi_spec.yaml  tests.md
docs/diagrams/: architecture.drawio  fit-flow.drawio  layered-architecture.drawio  predict-flow.drawio  train-flow.drawio  ttl-cache.drawio
migrations/: env.py
migrations/versions/: 5c5dace0df8b_create_model_metadata_table.py  a1b2c3d4e5f6_add_data_hash_to_model_metadata.py
reports/: benchmark.md  inference.md  populate.md  stress_baseline_20260430_004134.txt  stress_stress_20260430_004134.txt  stress_sustained_20260430_004134.txt  stress_test_report.md
scripts/: populate_training.py  run_benchmark.py  run_inference.py  run_inference_host.py  run_stress_test.sh
src/api/: app.py  dependencies.py  middleware.py  schemas.py
src/core/: config.py  database.py  redis_client.py  structlog_config.py  time_series.py
src/models/: __init__.py  model_metadata.py
src/repositories/: model_metadata.py
src/services/: anomaly_detection.py  metadata_cache.py  metrics_collector.py  mlflow_service.py  prediction_service.py  training_lock.py  training_service.py
tests/api/: test_dependencies.py  test_fit_route.py  test_healthcheck_route.py  test_predict_route.py
tests/core/: test_database.py  test_structlog_config.py
(+17 files in other folders)
