[project]
name = "anomaly-detection-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "boto3>=1.42.96",
    "cachetools>=7.0.6",
    "fastapi>=0.136.1",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
